src/components/calculator/calculator.scss
@use 'styles/utils';

.calculator {
    &::before {
        content: '';
        position: absolute;
        top: 50%;
        right: 0;
        transform: translateY(-50%);
        display: block;
        @include utils.circle(718px);
        opacity: 0.2;
        filter: blur(1000px);
        background-color: hsla(73, 61%, 56%, 1);
    }

    &:has(.calculator__selector._active) {
        padding-bottom: 283px;
    }

    &-content {
        display: flex;
        flex-direction: column;
    }

    &__form {
        margin-top: 50px;
        display: flex;
        gap: 20px;
        justify-content: center;
        align-items: center;

        &-button {
            width: 100%;
            max-width: 450px;
            height: 130px;
        }
    }

    .field {
        max-width: 450px;

        .pseudo {
            @include utils.square(32px);
            position: absolute;
            top: 50%;
            right: 40px;
            transform: translateY(-50%);
            color: transparent;
            cursor: pointer;
            text-shadow: 0 0 0 transparent;
            background-color: transparent;
            border: none;
        }

        &._period {
            display: flex;
            justify-content: space-between;
            align-items: center;

            &::after {
                @include utils.bg-defaults(auto);
                @include utils.square(32px);
                content: '';
                margin-left: auto;
                display: block;
                background-image: url('assets/icons/calendar.svg');
            }
        }
    }

    &__field {
        &._result {
            padding: 24.5px 40px;
            font: 700 3.2rem var(--manrope);
            background-color: transparent;
            border: 1px solid hsla(0, 0%, 100%, 0.15);
        }

        &-info {
            margin-top: 10px;
            display: flex;
            gap: 10px;
            align-items: center;
        }

        &-rate {
            font: 400 2rem var(--manrope);
        }

        &-tooltip {
            position: absolute;
            bottom: -70%;
            left: 0;
            display: none;
            color: var(--black);
            font: 500 1.5rem var(--manrope);
            text-align: center;
            background-color: var(--white);
            border-radius: 20px;

            &-text {
                position: relative;
                padding: 30px;
                width: 100%;
                max-width: 345px;

                &::after {
                    content: '';
                    position: absolute;
                    top: -6px;
                    left: 50%;
                    transform: translateX(50%);
                    width: 0;
                    height: 0;
                    border-right: 11px solid transparent;
                    border-bottom: 12px solid var(--white);
                    border-left: 11px solid transparent;
                }
            }
        }

        &-icon {
            @include utils.bg-defaults(auto);
            @include utils.square(24px);
            z-index: 50;
            cursor: pointer;
            opacity: 0.5;
            background-image: url('assets/icons/tooltip.svg');

            @include utils.hover {
                opacity: 1;

                & ~ .calculator__field-tooltip {
                    display: block;
                }
            }
        }
    }

    &-options {
        margin-top: 60px;
        display: flex;
        gap: 20px;
        align-items: center;
    }

    &__selector {
        position: relative;
        padding: 10px 20px;
        display: flex;
        gap: 10px;
        align-items: center;
        color: var(--white);
        cursor: pointer;
        background-color: hsla(0, 0%, 100%, 0.1);
        border-radius: 100px;

        &._active {
            &::after {
                transform: rotate(180deg);
            }

            .calculator__selector-options {
                display: flex;
            }
        }

        &::after {
            @include utils.bg-defaults(auto);
            @include utils.square(24px);
            content: '';
            display: block;
            background-image: url('assets/icons/arrow.svg');
        }

        &-options {
            position: absolute;
            z-index: 10;
            top: 60px;
            left: 0;
            padding: 20px;
            width: 345px;
            display: none;
            flex-direction: column;
            gap: 10px;
            color: var(--black);
            background-color: var(--white);
            border-radius: 20px;

            &-item {
                padding: 10px;
                display: flex;
                justify-content: space-between;
                align-items: center;
                cursor: pointer;
                border-radius: 10px;

                &::after {
                    @include utils.bg-defaults(auto);
                    @include utils.square(24px);
                    content: '';
                    display: block;
                    background-image: url('assets/icons/circle.svg');
                }

                @include utils.only-hover {
                    background-color: var(--gray);

                    &::after {
                        background-image: url('assets/icons/circle-checked.svg');
                    }
                }
            }
        }
    }

    &__info {
        margin-top: 50px;
        opacity: 0.5;
    }
}

@media only screen and (max-width: utils.$tablet1000) {
    .calculator {
        &:has(.calculator__selector._active) {
            padding-bottom: 50px;
        }

        &__info {
            margin-top: 30px;
            order: 3;
            font-size: 1.4rem;
        }

        &-options {
            margin-top: 30px;
            flex-direction: column;
            order: 1;
            align-items: flex-start;
        }

        &__form {
            margin-top: 30px;
            flex-direction: column;
            order: 2;

            &-button {
                height: 62px;
            }
        }

        &__field {
            &._result {
                height: 121px;
            }
        }
    }
}

